--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,49 @@
 
 <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.css" media="screen">
 
+<head>
+ <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Ambarish Wines</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#NewWines">Add Wine</a></li>
+              
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
 
-<div ng-app="wineApp">
-  <div ng-view>
+<br/>
+<br/>
+</head>
+
+<body>
+<div class="header"></div>
+
+<div class="container">
+
+ <div class="row-fluid" ng-app="wineApp">
+
+  <div id="content" class="span12" ng-view>
+
     <!-- partial will go here -->
+
   </div>
 </div>
 
+<footer class="footer">
+       Built by Ambarish Ganguly
+ </footer>
+
+</div>
+</body>
+
+</html>
